# mlflow-tracking-server-gcp-deployment

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.envs/: .gcp-example  .tracking-server-example
docker/: Dockerfile
docker/scripts/: run-server.sh
examples/: connecting-to-tracking-server.py
scripts/: create-server.sh  startup-script.sh
