[tool.poetry]
name = "mlflow-tracking-server-deployment"
version = "0.1.0"
description = "MLflow tracking server"
authors = ["Kıvanç Yüksel <emkademy@gmail.com>"]
repository="https://github.com/emkademy/mlflow-tracking-server-deployment"
classifiers= []

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "==2.5.0"
google-cloud-storage = "~=2.10.0"
psycopg2-binary = "~=2.9.6"

[build-system]
requires = ["setuptools","poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"


